--- a/pictoMaker/Base.lproj/Main.storyboard
+++ b/pictoMaker/Base.lproj/Main.storyboard
@@ -36,13 +36,13 @@
                                         </userDefinedRuntimeAttributes>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="6X8-Nr-VgB" secondAttribute="height" multiplier="1:1" id="PJG-oQ-2g4"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fL-Kz-d2o" customClass="Button" customModule="pictoMaker" customModuleProvider="target">
-                                <rect key="frame" x="294.33333333333331" y="630.66666666666663" width="78.666666666666686" height="35"/>
+                                <rect key="frame" x="294.33333333333331" y="630.66666666666663" width="78.666666666666686" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="square" catalog="system"/>
@@ -56,7 +56,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C5Q-Hu-nPJ" customClass="Button" customModule="pictoMaker" customModuleProvider="target">
-                                <rect key="frame" x="207.66666666666666" y="630.66666666666663" width="78.666666666666657" height="35"/>
+                                <rect key="frame" x="207.66666666666666" y="630.66666666666663" width="78.666666666666657" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.up.and.down.and.arrow.left.and.right" catalog="system"/>
@@ -87,11 +87,11 @@
                                 <rect key="frame" x="0.0" y="59" width="393" height="60"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="hhT-cM-HML" secondAttribute="height" multiplier="131:20" id="HuD-HG-yaM"/>
+                                    <constraint firstAttribute="width" secondItem="hhT-cM-HML" secondAttribute="height" multiplier="131:20" id="HS3-6O-63F"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jTU-Mn-cfN" customClass="Button" customModule="pictoMaker" customModuleProvider="target">
-                                <rect key="frame" x="121.33333333333334" y="630.66666666666663" width="78.333333333333343" height="35"/>
+                                <rect key="frame" x="121.33333333333334" y="630.66666666666663" width="78.333333333333343" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.down.right.and.arrow.up.left" catalog="system"/>
@@ -105,7 +105,7 @@
                                 </connections>
                             </button>
                             <colorWell contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5Lt-cb-Gm5">
-                                <rect key="frame" x="34.666666666666664" y="630.66666666666663" width="78.666666666666686" height="35"/>
+                                <rect key="frame" x="34.666666666666664" y="630.66666666666663" width="78.666666666666686" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
