--- a/pictoMaker/Base.lproj/Main.storyboard
+++ b/pictoMaker/Base.lproj/Main.storyboard
@@ -86,13 +86,6 @@
                                     <action selector="saveButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QBM-Bv-hYq"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhT-cM-HML" customClass="GADBannerView">
-                                <rect key="frame" x="0.0" y="44" width="414" height="63.333333333333343"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="hhT-cM-HML" secondAttribute="height" multiplier="131:20" id="HS3-6O-63F"/>
-                                </constraints>
-                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jTU-Mn-cfN" customClass="Button" customModule="pictoMaker" customModuleProvider="target">
                                 <rect key="frame" x="129.66666666666666" y="663" width="82.666666666666657" height="34"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -144,18 +137,28 @@
                                     <segue destination="Fel-CM-p3v" kind="presentation" id="y8V-N8-cVa"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hhT-cM-HML" customClass="GADBannerView">
+                                <rect key="frame" x="0.0" y="44" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="jjN-lA-wme"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
+                            <constraint firstItem="hhT-cM-HML" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0Yf-Nz-RHc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hhT-cM-HML" secondAttribute="trailing" id="2Wd-Qb-plF"/>
+                            <constraint firstItem="hhT-cM-HML" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="2v0-RC-mkL"/>
                             <constraint firstItem="drG-PG-gdv" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VXG-Sy-Oqx" secondAttribute="trailing" constant="8" symbolic="YES" id="3mM-D2-bT9"/>
                             <constraint firstItem="zNb-HA-Iaj" firstAttribute="height" secondItem="VXG-Sy-Oqx" secondAttribute="height" id="4dE-Gm-I3f"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="leading" secondItem="C5Q-Hu-nPJ" secondAttribute="trailing" constant="8" symbolic="YES" id="5RG-hb-Xp6"/>
                             <constraint firstItem="zNb-HA-Iaj" firstAttribute="height" secondItem="drG-PG-gdv" secondAttribute="height" id="Akn-bV-sCO"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="height" secondItem="jTU-Mn-cfN" secondAttribute="height" id="BwV-6f-Wv6"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="height" secondItem="5Lt-cb-Gm5" secondAttribute="height" id="DXb-IP-65c"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hhT-cM-HML" secondAttribute="trailing" id="Ec3-xc-KjN"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="leading" secondItem="C5Q-Hu-nPJ" secondAttribute="trailing" constant="8" symbolic="YES" id="Lb6-2L-0bt"/>
+                            <constraint firstItem="hhT-cM-HML" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MMG-fd-1zd"/>
                             <constraint firstItem="C5Q-Hu-nPJ" firstAttribute="leading" secondItem="jTU-Mn-cfN" secondAttribute="trailing" constant="8" symbolic="YES" id="OIa-Pe-cWF"/>
                             <constraint firstItem="VXG-Sy-Oqx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="QKE-8N-Ery"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zNb-HA-Iaj" secondAttribute="bottom" constant="20" id="QZj-hs-MGE"/>
@@ -176,8 +179,6 @@
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="width" secondItem="C5Q-Hu-nPJ" secondAttribute="width" id="jT0-Iz-egL"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="l5e-ex-do8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zNb-HA-Iaj" secondAttribute="trailing" constant="20" id="lX8-pQ-Yp8"/>
-                            <constraint firstItem="hhT-cM-HML" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nF9-lq-GLy"/>
-                            <constraint firstItem="hhT-cM-HML" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oxi-n2-RaU"/>
                             <constraint firstItem="6X8-Nr-VgB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qeH-bz-Xqx"/>
                             <constraint firstItem="jTU-Mn-cfN" firstAttribute="top" secondItem="6X8-Nr-VgB" secondAttribute="bottom" constant="8" symbolic="YES" id="rGb-md-N8z"/>
                             <constraint firstItem="4fL-Kz-d2o" firstAttribute="width" secondItem="5Lt-cb-Gm5" secondAttribute="width" id="rdO-Ti-3yx"/>
